--- a/query-online.mdx
+++ b/query-online.mdx
@@ -29,7 +29,7 @@ that will produce a target output. Although a simplification, your resolvers
 are a subset of these tasks. Consider the following feature class and resolvers:
 
 ```python
-from chalk.features import features
+from chalk.features import features, online
 
 @features
 class User:
