--- a/feature-versions.mdx
+++ b/feature-versions.mdx
@@ -37,6 +37,8 @@ argument to the `feature` function. This allows you to
 continue adding versions without affecting past versions.
 
 ```python
+from chalk.features import features, feature
+
 @features
 class Trial:
     id: int
@@ -69,6 +71,8 @@ It is best practice to leave the default as `1` until all
 consumers have been updated to use a newer version.
 
 ```python
+from chalk.features import features, feature
+
 @features
 class Trial:
     id: int
@@ -88,6 +92,8 @@ require versioned features.
 ### Requesting versioned features
 
 ```python
+from chalk.features import online
+
 @online
 def fn(code: Trial.code) -> Trial.failed:
     # Default version is 1.
