--- a/metrics-installation.mdx
+++ b/metrics-installation.mdx
@@ -112,7 +112,7 @@ The number of connections to keep open in the connection pool.
     Pgbouncer connection pool mode, either "transaction" or "session".
 </Attribute>
 <Attribute field={'service_type'} kind={'string'}>
-    The type of kubernetes service exposing the database pooler. Options are "load-balancer" or "cluster-ip".
+    The type of Kubernetes service exposing the database pooler. Options are "load-balancer" or "cluster-ip".
 </Attribute>
 <Attribute field={'backup_bucket'} kind={'string'}>
 The S3 bucket to use for backups using Barman.
