--- a/query-online.mdx
+++ b/query-online.mdx
@@ -29,7 +29,7 @@ that will produce a target output. Although a simplification, your resolvers
 are a subset of these tasks. Consider the following feature class and resolvers:
 
 ```python
-from chalk.features import features
+from chalk.features import features, online
 
 @features
 class User:
@@ -40,12 +40,12 @@ class User:
   palindrome_and_short: bool
 
 @online
-def get_is_palindrome(name: User.name, User.backwards_name) -> User.is_palindrome:
+def get_is_palindrome(name: User.name) -> User.is_palindrome:
   return name == name[::-1]
 
 @online
 def get_is_short(name: User.name) -> User.is_short:
-  return name.len() < 3
+  return len(name) < 3
 
 @online
 def get_is_short_palindrome(is_short: User.is_short, is_palindrome: User.is_palindrome) -> User.is_short_palindrome:
