--- a/models.mdx
+++ b/models.mdx
@@ -10,7 +10,7 @@ import { TipInfo } from '@/components/Tip'
 ---
 
 
-With Chalk you can easily register and load machine learning models into your deployments. You can then run inference on these models. This guide covers how to integrate models into your Chalk applications, including loading existing models, running inference, and training new models.
+With Chalk you can easily register and load machine learning models into your deployments. You can then run inference on these models. This guide covers how to integrate models into your Chalk applications, including loading existing models and running inference.
 
 ## Registering Models in Chalk
 
