--- a/scheduled-query.mdx
+++ b/scheduled-query.mdx
@@ -31,8 +31,8 @@ ScheduledQuery(
     name="enrich-transactions",
     schedule="0 0 * * *",
     output=[Transaction.clean_name, Transaction.category],
-    online=True,
-    offline=True,
+    store_online=True,
+    store_offline=True,
 )
 ```
 
