docs: update aws to include route53 perms

--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -173,6 +173,7 @@ infrastructure in your cloud account:
                 "elasticache:AddTagsToResource",
                 "elasticache:RemoveTagsFromResource",
                 "elasticache:ListTagsForResource"
+                "route53:*",
             ],
             "Effect": "Allow"
         }
