--- a/resource-configuration.mdx
+++ b/resource-configuration.mdx
@@ -185,7 +185,7 @@ Persistence Configuration tab. In order to enable autoscaling, it is required to
 Under `Settings > Connections`, you can view all the connections that your environment has to external
 resources, such as your online and offline stores, and the branch server. This is a good place to check
 the health of the different services in your environment, as well as to verify the types of connections
-configured. Significantly, you can also scale up
+configured.
 
 ## Environment Variables
 
