--- a/snowflake-deployment.mdx
+++ b/snowflake-deployment.mdx
@@ -92,9 +92,8 @@ Please share:
 
 ## Storage Integration Setup
 
-Once we have created the warehouse, database, schema, user, and role, the next step
-is to create storage integration(s). If you have granted the `CREATE INTEGRATION` privilege to the
-Chalk Role, Chalk can manage this creation. Otherwise, you will need to create the integration.
+Once you have created the warehouse, database, schema, user, and role, the next step
+is to create storage integration(s).
 
 The storage integration will create an IAM entity
 along with allowed or blocked storage locations that will allow Chalk to securely load
