redirect to docs site
Signed-off-by: Kelvin Lu <kelvin@chalk.ai>

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -1,7 +1,7 @@
 ---
 title: What is Chalk?
 metaTitle: What is Chalk?
-metaDescription: 'Chalk is the data platform for inference that enables innovative machine learning teams to focus on building the unique products and models that make their business stand out.'
+metaDescription: 'Chalk is the real-time data platform for ML & GenAI. More than a feature store, Chalk delivers fresh features in under 10ms with on-demand compute and caching in your cloud.'
 titleHidden: true
 hideToc: true
 published: true
